added coc settings, changed theme

--- a/nvim/install
+++ b/nvim/install
@@ -10,3 +10,5 @@ for f in `find . -regex ".*\.vim$\|.*\.lua$" | sed "s|^\./||"`; do
     rm -rf ~/.config/nvim/$f
     ln -s ~/dotfiles/nvim/$f ~/.config/nvim/$f
 done
+
+ln -s ~/dotfiles/nvim/coc-settings.json ~/.config/nvim/coc-settings.json
