--- a/nvim/install
+++ b/nvim/install
@@ -11,3 +11,4 @@ for f in `find . -regex ".*\.vim$\|.*\.lua$" | sed "s|^\./||"`; do
     ln -s ~/dotfiles/nvim/$f ~/.config/nvim/$f
 done
 
+ln -s ~/dotfiles/nvim/coc-settings.json ~/.config/nvim/coc-settings.json
