--- a/install
+++ b/install
@@ -6,6 +6,7 @@ ln -sf $SCRIPTPATH/.config/x11/xresources $HOME/.Xresources
 ln -sf $SCRIPTPATH/.config/x11/xprofile $HOME/.xprofile
 ln -sf $SCRIPTPATH/.config/zsh/zprofile $HOME/.zprofile
 
+mkdir -p $HOME/.cache/zsh
 mkdir -p $HOME/.config
 for f in .config/*; do
     if [ "$f" != ".config/nvim" ]; then
